public/styles/cart.css
.cart {
  background: rgba(255, 140, 12, 0.25);
  bottom: 1000px;
  display: flex;
  float: right;
  height: 100vh;
  margin: 0;
  position: relative;
  width: auto;
  z-index: 1;
}

.cart-tab {
  display: flex;
  width: 80px;
  font-size: 0.7em;
}

.cart-toggle {
  background: #f2f2f2;
  border: none;
  font-size: 0.7em;
  height: 50px;
  width: 100%;
}

.cart-toggle:hover {
  background: #fd9827;
  color: #24303d;
}

.cart-full {
  align-items: center;
  background: rgba(36, 48, 61, 0.85);
  display: none;
  flex-direction: column;
  overflow: scroll;
  width: 300px;
}

.cart-full h3 {
  align-items: center;
  color: #fff;
  display: flex;
  height: 10%;
  justify-content: center;
  margin: 0;
  width: 100%;
}

.cart-full h5 {
  align-items: center;
  color: #fff;
  display: flex;
  height: 10%;
  justify-content: center;
  margin: 0;
  width: 100%;
}

.item-list {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 60%;
  justify-content: center;
  margin: 0;
  overflow: scroll;
  width: 90%;
}

.total-value {
  align-items: center;
  color: #fff;
  display: flex;
  height:10%;
  justify-content: center;
  margin: 0;
  width: 100%;
}

.single-item {
  align-items: center;
  background: orange;
  display: flex;
  height: 50px;
  justify-content: center;
  width: 100%;
}


.purchase-btn {
  height: 10%;
  margin: 0 0 20px 0;
  width: 80%;
}

.toggle-cart-display {
  display:flex;
}

